--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@ input {
 </div>
 
 <ul id="myUL">
-  <li>Hit the gym</li>
-  <li class="checked">Pay bills</li>
-  <li>Meet George</li>
-  <li>Buy eggs</li>
+  <li>Go to the gym</li>
+  <li class="checked">Get Cofee</li>
+  <li>Pay Light Bill</li>
+  <li>Buy Grocery</li>
   <li>Read a book</li>
-  <li>Organize office</li>
+  <li>Complete an Assignment</li>
 </ul>
 
 <script>
