--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> To Do List </title> 
+  <title> To Do List </title>
+  <link rel = "icon" href =
+"E:\SEM 3\Intern\2.png"
+       type = "image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
@@ -129,19 +132,19 @@ input {
 </head>
 <body>
 
-<div id="myDIV" class="header">
+<div id="Div" class="header">
   <h2 style="margin:5px">To Do List</h2>
-  <input type="text" id="myInput" placeholder="Add new...">
+  <input type="text" id="Input" placeholder="Add new...">
   <span onclick="newElement()" class="addBtn">Add</span>
 </div>
 
-<ul id="myUL">
-  <li>Go to the gym</li>
-  <li class="checked">Get Cofee</li>
-  <li>Pay Light Bill</li>
-  <li>Buy Grocery</li>
+<ul id="UL">
+  <li>Hit the gym</li>
+  <li class="checked">Pay bills</li>
+  <li>Meet George</li>
+  <li>Buy eggs</li>
   <li>Read a book</li>
-  <li>Complete an Assignment</li>
+  <li>Organize office</li>
 </ul>
 
 <script>
@@ -149,15 +152,15 @@ input {
 // Create a new list item when clicking on the "Add" button
 function newElement() {
   var li = document.createElement("li");
-  var inputValue = document.getElementById("myInput").value;
+  var inputValue = document.getElementById("Input").value;
   var t = document.createTextNode(inputValue);
   li.appendChild(t);
   if (inputValue === '') {
-    alert("You must write something!");
+    alert("You should write something...");
   } else {
-    document.getElementById("myUL").appendChild(li);
+    document.getElementById("UL").appendChild(li);
   }
-  document.getElementById("myInput").value = "";
+  document.getElementById("Input").value = "";
 
   var span = document.createElement("SPAN");
   var txt = document.createTextNode("Remove");
