--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@ input {
 </div>
 
 <ul id="UL">
-  <li>Hit the gym</li>
-  <li class="checked">Pay bills</li>
-  <li>Meet George</li>
-  <li>Buy eggs</li>
-  <li>Read a book</li>
-  <li>Organize office</li>
+  <li>Get A Cofee</li>
+  <li class="checked">Go To the Gym</li>
+  <li>Pay LightBill</li>
+  <li>Attend Class</li>
+  <li>Complete an Assignment</li>
+  <li>Meet Sayali</li>
 </ul>
 
 <script>
