--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title> To Do List </title>
   <link rel = "icon" href =
-"E:\SEM 3\Intern\2.png"
+"2.png"
        type = "image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
